# voucher

./: Cargo.toml  Makefile
doc/: search-index.js  settings.html  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/convert/: trait.TryFrom.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/implementors/minerva_voucher/: trait.Sign.js
doc/minerva_voucher/: all.html  enum.SignatureAlgorithm.html  enum.VoucherError.html  fn.init_psa_crypto.html  index.html  macro.vch.html  macro.vrq.html  sidebar-items.js  struct.Voucher.html  trait.Sign.html  trait.Validate.html
doc/minerva_voucher/attr/: constant.ATTR_ASSERTION.html  constant.ATTR_CREATED_ON.html  constant.ATTR_DOMAIN_CERT_REVOCATION_CHECKS.html  constant.ATTR_EXPIRES_ON.html  constant.ATTR_IDEVID_ISSUER.html  constant.ATTR_LAST_RENEWAL_DATE.html  constant.ATTR_NONCE.html  constant.ATTR_PINNED_DOMAIN_CERT.html  constant.ATTR_PINNED_DOMAIN_PUBK.html  constant.ATTR_PINNED_DOMAIN_PUBK_SHA256.html  constant.ATTR_PRIOR_SIGNED_VOUCHER_REQUEST.html  constant.ATTR_PROXIMITY_REGISTRAR_CERT.html  constant.ATTR_PROXIMITY_REGISTRAR_PUBK.html  constant.ATTR_PROXIMITY_REGISTRAR_PUBK_SHA256.html  constant.ATTR_SERIAL_NUMBER.html  enum.Assertion.html  enum.Attr.html  index.html  sidebar-items.js  type.AttrDisc.html
doc/minerva_voucher/debug/: enum.CborType.html  enum.CoseError.html  fn.content_comp.html  fn.content_comp_permissive.html  fn.decode.html  fn.sig_one_struct_bytes_from.html  index.html  sidebar-items.js
doc/src/minerva_voucher/: attr.rs.html  cose_data.rs.html  cose_sig.rs.html  lib.rs.html  sid.rs.html  sid_data.rs.html  sign.rs.html  utils.rs.html  validate.rs.html  voucher.rs.html  yang.rs.html
if/: Cargo.toml  Makefile
if/.cargo/: config
if/include/: voucher_if.h
if/src/: lib.rs
if/src/tests/: mod.rs  voucher.rs
src/: attr.rs  lib.rs  sid.rs  sid_data.rs  sign.rs  utils.rs  validate.rs  yang.rs
