[package]
name = "minerva-voucher"
version = "0.8.11"
description = "Library to use BRSKI (https://datatracker.ietf.org/doc/html/rfc8995) Voucher in Rust"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "minerva_voucher"

[features]
default = ["sign", "validate"]
std = []

sign = ["minerva-mbedtls"]
validate = ["minerva-mbedtls"]
mbedtls-backend = ["minerva-mbedtls"]

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "da77a48" }
cose = { git = "https://github.com/j-devel/cose-rust", rev = "b07436f", default-features = false }
minerva-mbedtls = { git  = "https://github.co/AnimaGUS-minerva/minerva-mbedtls", optional = true, features = ["std"] }
#minerva-mbedtls = { path = "/ssw/projects/trentonio/minerva-mbedtls", optional = true, features = ["std"] }
#psa-crypto      = { path = "/ssw/projects/trentonio/rust-psa-crypto/psa-crypto", features=["minerva", "static"] }
#psa-crypto-sys  = { path = "/ssw/projects/trentonio/rust-psa-crypto/psa-crypto-sys", features=["static", "operations"] }
# psa-crypto      = { path = "/ssw/projects/trentonio/rust-psa-crypto/psa-crypto", features=["minerva", "operations"] }

[dev-dependencies]
hex-literal = { git = "https://github.com/AnimaGUS-minerva/utils.git", branch = "allow-hash-comments-in-hex" }
