[package]
name = "minerva-voucher-if"
version = "0.1.1"
edition = "2021"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "voucher_if"
crate-type = ["staticlib"]
path = "src/lib.rs"

[features]
default = []
std = []

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "254de7d", features=["allocator"] }
minerva-voucher = { path = ".." }
